[metadata]

name = beasy
version = 0.0.1a2
url = https://github.com/jdretz/simple-bea-client
author = Jarrett Retz
author_email = jretz@jrts.info
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Simple Python API client for accessing data on the Bureau of Economic Analysis application programming interface.

long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
here = pathlib.Path(__file__).parent.resolve()

# Get the long description from the README file
long_description = (here / 'README.md').read_text(encoding='utf-8')